# marble_plugin

./: CMakeLists.txt  License  manifest.xml  package.xml  plugin.xml  setup.py
include/rqt_marble_plugin/: drawable_marble_widget.h  manage_kml_dialog.h  marble_plugin.h
scripts/: rqt_marble_plugin
src/marble_plugin/: CMakeLists.txt  drawable_marble_widget.cpp  drawable_marble_widget.h  manage_kml_dialog.cpp  manage_kml_dialog.h  manage_kml_dialog.ui  marble_plugin.cpp  marble_plugin.h  marble_plugin.ui
src/marble_plugin/visualisation_marker/: circle.h  colored_polygon.h
src/rqt_marble_plugin/: drawable_marble_widget.cpp  manage_kml_dialog.cpp  marble_plugin.cpp  marble_plugin.ui
