<?xml version="1.0"?>
<package>
  <name>rqt_marble_plugin</name>
  <version>0.0.2</version>
  <description>The rqt_marble_plugin package</description>
  <license>BSD</license>

  <maintainer email="Tobias.Baer@fzi.de">Tobias Bär</maintainer>
  <url type="website">http://ros.org/wiki/marble_plugin</url> -->
  <author email="Tobias-Baer@fzi.de">Tobias Bär</author> -->


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_cpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>libmarble-dev</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_cpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
     <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
